src/sass/modules/_nav.scss
@import "bootstrap-mods/variables";

.is-menu-open {
    overflow-y: visible;
}

.navigation-bar {
    font-family: $base-font-family;
    font-size: 0;
    list-style-type: none;
    margin: 0;
    text-align: center;

    li {
        display: inline-block;
        margin: 0;

        a {
            display: inline-block;
            @include font-size(16px);
            line-height: 24px;
            color: #fff;
            padding: 0 25px;
            text-decoration: none;
            opacity: 0.75;
            transition: opacity 0.2s ease-in;

            &:hover {
                opacity: 1;
            }
        }
    }
}

@include media($screen-md) {
    .home-banner-nav .js-scroll-to {
        display: none;
    }
}

.menu-close {
    float: right;
    margin-top: 11px;
    opacity: 0.2;
    @include font-size(18px, true);
    padding: 0;
    color: white;
    transition: opacity 0.2s ease-in;

    &:hover,
    &:focus {
        color: white;
        opacity: 1;
    }
}

$nav-width: 310px;

.side-nav {
    z-index: $zindex-modal;
    width: 0;
    right: $nav-width;
    margin-right: -$nav-width;
    position: fixed;
    height: 100vh;
    transition: width ease-in-out 0.25s;
    overflow-y: auto;
    overflow-x: hidden;

    .menu {
        position: absolute;
        width: $nav-width;
        top: 0;
        right: 0;
        background: #1a1a1a;
        padding: 30px 50px;
        color: #555;
        overflow-y: auto;
        height: 100vh;
        z-index: 19;
    }

    .buttons-container {
        min-height: calc(100% - 50px);
        position: relative;
        padding-left: 20px;
    }

    ul {
        margin-top: 30px;
        list-style-type: none;
        margin-left: 0;

        a {
            display: inline-block;
            color: #fff;
            margin-bottom: 12px;
            @include font-size(20px);
            text-decoration: none;
            transition: opacity 0.3s 0.15s ease-in-out, visibility 0.3s 0.15s ease-in-out, margin 0.3s 0.15s ease-out, color 0.15s 0s ease-in;
            opacity: 0;
            visibility: hidden;

            &:hover {
                text-decoration: none;
                color: #666;
            }

            &.is-selected:before {
                content: '— ';
            }
        }
    }

    .secondary-menu {
        position: absolute;
        bottom: 0;
        left: 0;
        right: 0;
        margin: auto;
        padding-left: 20px;

        a {
            text-decoration: none;
            color: #666;
            @include font-size(16px);
        }
    }

    &.loaded {
        opacity: 1;
    }

    @include media($screen-sm) {
        @include transition-full(transform .3s ease-in-out);
        transform: translateY(calc(-100% - 70px));
        position: fixed;
        left: 0;
        bottom: 0;
        z-index: $zindex-mobile-navbar;
        text-align: center;
        overflow: hidden;
        margin: auto;
        width: 100%;

        .menu {
            width: 100%;
            height: 100vh;
            padding: 20px 40px;

            ul a {
                margin-left: 0;
            }
        }

        .buttons-container {
            padding: 0;
            height: calc(100% - 50px);

            .lets-begin {
                position: absolute;
                top: 0;
                left: 50%;
                transform: translateX(-50%);
            }

            .menu-item-wrapper {
                position: absolute;
                top: 50%;
                right: 0;
                left: 0;
                transform: translateY(-50%);
            }

            .secondary-menu {
                padding: 0;
            }
        }
    }

    @media (max-width: $screen-sm) and (orientation: landscape) {
        overflow-y: scroll;

        .buttons-container {
            min-height: calc(100vh + 100px);
            padding: 0;

            ul {
                margin-top: 30px;
                padding: 10px 0;

                .menu-item-wrapper {
                    position: initial;
                }
            }
        }
    }
}

.menu-backdrop {
    background: rgba(0, 0, 0, .4);
    transition: all 0.2s ease-in-out;
    visibility: hidden;
    opacity: 0;
    visibility: hidden;
    transition: all ease-in-out 0.2s;
}

@include media-min($screen-sm) {
    .menu {
        ul a {
            margin-left: 8%;
            margin-top: 0;
        }
    }

    .is-menu-open {
        .menu-backdrop {
            opacity: 0.4;
            visibility: visible;
        }

        .side-nav {
            width: $nav-width;

            ul a {
                opacity: 1;
                visibility: visible;
                margin-left: 0;
            }
        }
    }
}

@include media($screen-sm) {
    .is-menu-open {
        overflow: hidden;

        .side-nav {
            transform: translateY(0);
            width: 100%;
            overflow: hidden;

            .menu {
                width: 100%;

                ul a {
                    opacity: 1;
                    visibility: visible;
                }
            }
        }
    }
}

.-home {
    .is-menu-open {
        overflow: hidden;

        .side-nav {
            transform: translateY(0);
            width: 100%;
            overflow: hidden;

            .menu {
                width: 100%;

                ul a {
                    opacity: 1;
                    visibility: visible;
                }
            }
        }
    }

    .js-close-menu {
        position: absolute;
        right: 14%;
        top: 0;
        margin-left: 5px;
    }
}

.go-to-section {
    position: absolute;
    left: 50%;
    bottom: 50px;
    padding: 20px;
    width: 20px;
    height: 18px;
    background: url('../images/arrow-down.png') center center no-repeat;
    color: #fff;
    text-decoration: none;

    &.active {
        @include animation('gotosection 1s linear infinite');
    }

    @include media($screen-md) {
        display: none !important;
    }
}

@include keyframes(gotosection) {
    0% {
        transform: translate(-50%, 0);
    }

    50% {
        transform: translate(-50%, 10px);
    }

    100% {
        transform: translate(-50%, 0);
    }
}

